# MeetAnt

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_vcpkg.md  setup-vcpkg.bat  setup-vcpkg.sh  vcpkg.json
src/: Annotation.cpp  Annotation.h  App.cpp  App.h  BookmarkDialog.cpp  BookmarkDialog.h  ConfigDialog.cpp  ConfigDialog.h  MainFrame.cpp  MainFrame.h  NoteDialog.cpp  NoteDialog.h  NotePopup.cpp  PlaybackControlBar.cpp  PlaybackControlBar.h  SSEClient.cpp  SSEClient.h  TranscriptionBubbleCtrl.cpp  TranscriptionBubbleCtrl.h  main.cpp  meetant.rc
